# minishell

./: .gitignore  CMakeLists.txt  Makefile  README.md  example_pipe  file  info  minishell
_void/: copy_envp.c  get_envp_vars.c  void_termcap.c
_void/executor_tests/: 00_main_test.c
_void/lexer_tests/: main_test.c  test_lexer_00.c
_void/tests/: 00_test  02_test_executor
includes/: minishell.h
libft/: Makefile  ft_array_len.c  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_empty_line.c  ft_itoa.c  ft_lstadd_back.c  ft_lstclear.c  ft_lstnew.c  ft_lstsize.c  ft_memset.c  ft_putnbr_fd.c  ft_split.c  ft_strcmp.c  ft_strdup.c  ft_strlen.c  ft_toupper.c  libft.h
srcs/: free_all.c  ft_echo.c  get_next_line.c  main.c  pre_executer.c  prints.c
srcs/buildins/: mini_cd.c  mini_cs.c  mini_echo.c  mini_env.c  mini_exit.c  mini_export.c  mini_hello.c  mini_pwd.c  mini_unset.c
srcs/executor/: _to_do.md  example_pipe.c  execute_command.c  executor.c  executor_pipe.c  executor_void.c  ft_echo.c  pre_executer.c  termcap_test.c
srcs/executor/executor_tests/: 00_main_test.c  01_test_get_envp_var_pointer.c  executor_tests.h
srcs/get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils.c
srcs/lexer/: lexer_get_token.c  lexer_m.c  lexer_utils.c
srcs/new_parser/: _to_do.md  counters.c  do_dollar.c  do_pipe.c  do_quotes.c  do_r_redirect.c  do_redirect.c  do_reverse_redirect.c  do_spec.c  double_quotes.c  double_redirect.c  ft_init_comand.c  ft_init_command.c  ft_init_struct.c  info  make_args.c  name.c  new_pars.c  pars_utils.c  parser.c  utils_3.c
srcs/new_parser/termcap/: termcap.c  termcap_init.c
srcs/parser/: ft_empty_line.c  get_command.c  info  lexer.c  lexer_m.c  main_m.c  make_arguments.c  name.c  new_pars.c  pars.c  parser.c  parser_idea.c  parser_m.c  utils1.c  utils_3.c
srcs/parser/lexer_tests/: main_test.c  test_lexer.c  test_lexer.h  test_lexer_00.c  test_lexer_00.h  test_lexer_01.c
srcs/parser/termcap/: termcap.c
srcs/signals/: signals_handler.c
srcs/termcap/: termcap.c  termcap_history.c  termcap_input_signal.c  termcap_key_handle.c
srcs/utils/: common_init.c  common_init_and_shift_line.c  copy_envp.c  free_all.c  free_line_list.c  get_envp_variable.c  get_envp_variable_update.c  get_envp_variable_utils.c  get_next_line.c  make_envp.c  new_command.c  open_file.c  prompt.c  split_path.c  test.c  utils.c
tests/: 00_test  01_0405_tests  02_test_executor  03_slack  french  french_1  negative_test
